# set-based-prompting-finetuning

./: README.md  main.py  pyproject.toml  setup.py  tmp.ipynb
analysis/: 1-1-csqa_run.sh  1-2-csqa_run.sh  1-CSQA-results.ipynb  2-1-mmlu_run.sh  2-2-mmlu_run.sh  3-MMLU-combinitorial-results-Copy1.ipynb  3-csqa_run_permutations.sh  3-mmlu_run_permutations.sh  Untitled1.ipynb  analyze_sbp.py  example-figure.ipynb
analysis/old_runs/: 1-1-csqa_run.sh  1-2-csqa_run_70b.sh  1-CSQA-results.ipynb  2-1-mmlu_run.sh  2-2-mmlu_run_70b.sh  2-MMLU-results.ipynb  3-MMLU-combinitorial-results.ipynb  3-mmlu_run_permutations.sh  4-MMLU-examples.ipynb  Untitled.ipynb  Untitled1.ipynb  csqa_intial_tables.ipynb  long-prompts.ipynb  mmlu_initial_plots.ipynb  variation_plots.ipynb
data/: csqa_quoted.jsonl  csqa_quoted_qa.jsonl  csqa_quoted_qa_s2d.jsonl  csqa_quoted_qa_wiki.jsonl  csqa_quoted_qa_wiki_standard.jsonl  csqa_quoted_s2d.jsonl  gen_qa.py  gen_qa_wiki.py  gen_qa_wiki_standard.py  gen_s2d_qa.py
data/csqa_quoted_qa/: csqa_input_00000.json  csqa_input_00500.json  csqa_input_01000.json  csqa_input_01500.json  csqa_input_02000.json  csqa_input_02500.json  csqa_input_03000.json  csqa_input_03500.json  csqa_input_04000.json  csqa_input_04500.json  csqa_input_05000.json  csqa_input_05500.json  (+8 more)
order_independent_llm/: README.md  data_types.py  input_processing.py  main.py  modeling_llama_attention.py  plot_helpers.py  pyproject.toml  record_accuracy.py
scripts/: benchmark_model.py  benchmark_models.sh  finetune.sh  prep_data.py  train.py  train_full.py  train_mini.py  utils.py
(+373 files in other folders)
